--- a/meladx.conf
+++ b/meladx.conf
@@ -1,5 +1,5 @@
 ## Attention besoin de mettre des majuscules
 ## Deja les commentaires sont geres
-Server_smtp = "smtp.free.fr:25"
+Server_smtp = "smtp.gmail.com:25"
 Auth_Login = "systeme@sra.fr"
 Auth_Password = "systeme2000"
