--- a/meladx.conf
+++ b/meladx.conf
@@ -1,5 +1,6 @@
 ## Attention besoin de mettre des majuscules
 ## Deja les commentaires sont geres
-Server_smtp = "smtp.gmail.com:25"
-Auth_Login = "systeme@sra.fr"
-Auth_Password = "systeme2000"
+Server_smtp = "smtp.gmail.com"
+Port = 587
+Auth_Login = "syssra@gmail.com"
+Auth_Password = "xxxxxxxx"
